2007-06-19  Naba Kumar  <naba@gnome.org>

	* plugins/message-view/message-view.c: Wrap long lines (at 1000px)
	Bug #448491 Empty Lines Problem.

	* libanjuta/anjuta-utils.c: Return incompletly transformed text too.
	
	* data/default.profile, plugins/message-view/plugin.c: Do not
	restore session for messages.
	Fixes bug #377461 – don't create new message window for each
	build/find.

	* plugins/profiler/plugin.c: Disconnect session signals on deactivate.
	Fixes a crash on exit/project-close if profiler plugin is loaded.

2007-06-17  Naba Kumar  <naba@gnome.org>

	* plugins/sourceview/sourceview.glade: Set correct font
	default value and use monospace instead of sans. Fixes
	bug #448408 – crash in Anjuta IDE: Trying to change the
	editor

2007-06-16 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/search/search-replace.c,
	plugins/search/search-replace.h,
	plugins/search/anjuta-search.glade:
	Replace deprecated GtkCombo by GtkComboBox or GtkComboBoxEntry
	Fixes bug #355166

2007-06-16 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/plugin.c,
	plugins/debug-manager/breakpoints.c:
	Add weak references, fixes bug #448053 ?

2007-06-16  Naba Kumar  <naba@gnome.org>

	* libanjuta/plugin-manager.c: Added remembered plugins page in plugins
	dialog to allow forgetting them if user chooses to select a different
	one.

2007-06-13  Naba Kumar  <naba@gnome.org>

	* plugins/sourceview/sourceview-prefs.c: Initialize font
	on startup correctly if use_theme is set.

	* plugins/sourceview/sourceview-prefs.c: Use desktop fixed font
	if available for default font. Fixes bug #447304.

	* plugins/sourceview/sourceview-prefs.c: Return value based
	on right data type. Fixes Bug #438878 – Using gtksourceview editor
	for the first time has black background
	
	* plugins/project-manager/plugin.c: Give a better error message
	when project could not be loaded.

	* libanjuta/anjuta-serializer.c: Added a comment.

2007-06-13  Johannes Schmid <jhs@gnome.org>

	* configure.in: