@@ -1,3 +1,7 @@
+2007-06-20  Vincent Geddes  <vincent.geddes@gmail.com>
+
+        * plugins/glade/plugin.c: Update for API changes in glade 3.3.0 and above.
+         
 2007-06-19  Naba Kumar  <naba@gnome.org>
 
 	* plugins/message-view/message-view.c: Wrap long lines (at 1000px)
